# Reporting

./: 2021-03-01-report.org  2021-04-05-report.org  2021-04-12-report.org  2021-04-monthly-report.org  2021-05-03-report.org  2021-05-07-community-call.md  2021-05-10-report.org  2021-05-17-report.org  2021-05-monthly-report.org  2021-06-14-report.org  2021-06-gsoc-2021-arthur-cohen-monthly-report.md  2021-07-02-community-call.md  2021-07-19-report.org  2021-07-26-report.org  2021-08-02-report.org  2021-08-16-report.org  2021-08-monthly-report.org  2021-09-03-community-call.md  2021-09-20-report.org  2021-09-monthly-report.org  2021-10-01-community-call.md  2021-10-18-report.org  2021-11-05-community-call.md  2021-11-29-report.org  2021-11-monthly-report.org  2021-year-report.org  2022-01-10-report.org  2022-01-17-report.org  2022-01-monthly-report.org  2022-02-07-report.org  2022-02-21-report.org  2022-02-monthly-report.org  2022-03-04-community-call.md  2022-03-07-report.org  2022-03-14-report.org  2022-03-21-report.org  2022-03-28-report.org  2022-03-monthly-report.org  2022-04-01-community-call.md  2022-04-11-report.org  (+76 more)
2020/: 2020-10-23-report.org  2020-10-30-report.org
2021/: 2021-01-11-report.org  2021-01-18-report.org  (+30 more)
util/generator/: Cargo.toml  Dockerfile  README.md  monthly.sh  test.org  weekly.sh
util/generator/src/: error.rs  github.rs  main.rs  progress.rs  repository.rs  task.rs  testcase.rs
util/generator/src/github/: contrib.rs  issues.rs  milestone.rs  pr.rs
util/generator/src/templates/: #report.org.template#  report.org  report.org.template
(+173 files in other folders)
