[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
octocrab = "0.17.0"
serde = { version = "1.0.150", features = ["derive"] }
tinytemplate = "1.2.1"
tokio = { version = "1.23.0", features = ["full"] }
